Quick fix, should in theory work - Needs to be tested on IOS

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -10,3 +10,9 @@
 #pagination-current {
   font-size: $font-size-large;
 }
+
+input {
+   -webkit-appearance: none;
+   border-radius: 0;
+   -webkit-border-radius: 0px;
+}
